--- a/lovequiz.client/src/header.scss
+++ b/lovequiz.client/src/header.scss
@@ -4,7 +4,7 @@
     border-bottom: 1px solid #A86A7A;
     background: #A86A7A;
     box-shadow: 0 6px 16px -4px #A86A7A;
-    position: sticky;
+    //position: sticky;
     top: 0;
     z-index: 100;
 }
